<resources>
    <string name="app_name">Weather</string>

    <string name="dummy_text">dummy</string>

    //Weather
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="current">current</string>


    //Random
    <string name="na">--</string>
    <string name="notification">Notification</string>
    <string name="address">Address, City or Zip Code</string>
    <string name="favourites">Favourites</string>

    //Days
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

</resources>
